- support for youtube VR meta-data

## Encryption
- support for multi-key per sample encryption
- Support for HLS full segment encryption (demux and mux)

## Misc
- improved HTTP rate limiter and chunk-transfer rate estimator
- reworked mod-dirs and js-dirs usage, JSFilters now can be part of the default available filters
- support for windows long path
- moved to latest QuickJS (2021-03-27)
- support for FFmpeg 4.4
- many bug fixes, improvements and security patches


# 10/09/2020: GPAC 1.0.1
This release fixes build and installation issues in 1.0.0, as well as various bugs introduced during the migration to the filters architecture.

It also adds several small features:
- better ttml import
- better support for MPEGH audio
- support fur DASH UTCTiming
- manifest generation from pre-fragmented DASH/HLS mp4
- speed optimization in isobmf reading (normal and fragmented)
- improved JS API for the filter session
- core tools exposed as JS module (file io, bitstream, etc ...)
- android fixes

# 16/06/2020: GPAC 1.0
 - Complete rewrite of GPAC streaming core:
    * addition of a filter-based architecture, used by MP4Client and MP4Box.
    * moving all decoders and demuxer plugins of MP4Client and most of MP4Box import/export code as filters for this new architecture,
    * moving DASH/HLS segmenter to a filter
    * moving MP4Client compositor and most of the GF_Terminal internals to a filter
    * addition of a new application gpac, whose only purpose is to create and run filter chains
    * removal of MP42TS and DashCast applications since these functionalities are provided by gpac
    * deprecation of some features (widget management, MSE draft implementation for SVG media, UPnP, TEMI player support).
- Profile system allowing to override through a static file default options of all filters and libgpac core
- Alias system for gpac app to simplify your command lines
- Enhanced DASHer:
    * Support for HLS and dual HLS / DASH generation
    * Support for any input